# CaTTasksList

./: .gitignore  CMakeLists.txt  Executable.cpp  Executable.h  List.cpp  List.h  Main.cpp  Task.cpp  Task.h  TaskList.cpp  TaskList.h  TasksList.cpp  TasksList.h  TerminalOut.cpp  TerminalOut.h
